docs: change to reflect old version

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body class="bg-black text-white p-5">
 
 <header>
-    <h1 class="text-5xl font-pressstart2p p-5">play notes</h1>
+    <h1 class="text-5xl font-pressstart2p p-5">skysynth (old ver.)</h1>
 </header>
 
 <main>
@@ -38,6 +38,7 @@
     </ul>
     <br \>
     <ul class="text-xl">
+        <li class="text-yellow-600">this is the 0.9.1 version of skysynth. check out the newest version <a href="https://www.skysynth.space" target="_blank" rel="noopener noreferrer"><u>here</u></a>.</li>
         <li class="text-yellow-400">current transpose value = <span id="transpose-value">0</span> | current key: <span id="scale-value">C</span></li> 
         <li class="text-yellow-400"> current octave shift: <span id="octave-value">0 (default)</span></li> 
         <li class="text-yellow-400"></li>
