chore: add link to newest version

--- a/index.html
+++ b/index.html
@@ -142,7 +142,9 @@
     made by @manystarsapart <br>
     for any feedback, please contact through discord <br>
     last updated: 10 feb 2025 (happy lunar new year!)<br>
-    <a href="https://github.com/manystarsapart/skysynth/blob/main/CHANGELOG.md">view changelog</a>
+    current version: 0.9.1 <br>
+    <a href="https://github.com/manystarsapart/skysynth/blob/main/CHANGELOG.md" target="_blank">view changelog</a>
+    | <a href="https://www.skysynth.space" target="_blank"><u>newest version</u></a>
 
     <!-- known issues:
     1. space being highest note means it auto presses the buttons
