style: change thumbnail

--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property="og:title" content="SkySynth">
     <meta property="og:description" content="play notes and stuff. now with transpose, octave and record!">
-    <meta property="og:image" content="http://www.skysynth.space/assets/thumbnail.jpeg">
+    <meta property="og:image" content="http://www.skysynth.space/assets/thumbnail.png">
     <meta property="og:url" content="https://www.skysynth.space">
 
-    <title>SkySynth</title>
-    <link rel="icon" type="image/png" href="./assets/thumbnail.jpeg"/>
+    <title>SkySynth (OLD)</title>
+    <link rel="icon" type="image/png" href="./assets/thumbnail.png"/>
     <link rel="stylesheet" href="./output.css">
     <script src="main.js"></script>
     <script src="./Tone.min.js"></script>
